2010-01-13  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Split the build process in two different .pro files.
        This allows qmake to be run once all source files are available.

        * Scripts/webkitdirs.pm: Add calls to make DerivedSources.pro in JSC and WC.

2010-01-13  Shinichiro Hamaji  <hamaji@chromium.org>

        Unreviewed tiny typo fix in docstrings.

        * Scripts/webkitpy/style/checker_unittest.py:

2010-01-13  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Shinichiro Hamaji.

        Created a CategoryFilter class to encapsulate the logic of
        filter rules.

        https://bugs.webkit.org/show_bug.cgi?id=33454

        * Scripts/webkitpy/style/checker.py:
          - Added CategoryFilter class.

        * Scripts/webkitpy/style/checker_unittest.py:
          - Added CategoryFilter unit tests.

        * Scripts/webkitpy/style/cpp_style.py:
          - Updated filter methods to use CategoryFilter.

        * Scripts/webkitpy/style/cpp_style_unittest.py:
          - Updated references to filters.

2010-01-12  Shinichiro Hamaji  <hamaji@chromium.org>

        Unreviewed. Now I can review :)

        * Scripts/webkitpy/committers.py:

2010-01-12  Brent Fulgham  <bfulgham@webkit.org>

        Reviewed by Darin Adler.

        Extend WinLauncher example with better printing features.

        * WinLauncher/PrintWebUIDelegate.cpp:
        (PrintWebUIDelegate::webViewPrintingMarginRect): Provide slightly
         larger margins.
        (PrintWebUIDelegate::webViewHeaderHeight): Compute header height based
         on text metrics.
        (PrintWebUIDelegate::webViewFooterHeight): Compute footer height based
         on text metrics.
        (PrintWebUIDelegate::drawHeaderInRect): Write useful header, along
         with separating line.
        (PrintWebUIDelegate::drawFooterInRect):
        * WinLauncher/PrintWebUIDelegate.h: Remove stubs.